tests/snapshots/simple_additions__simple_additions_on_top_of_ai_contributions.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    30: "Test User",
    31: "Test User",
    32: "Test User",
    33: "Test User",
    34: "Test User",
    35: "cursor",
}
