tests/snapshots/simple_additions__simple_additions_with_base_commit.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "test_user",
    2: "test_user",
    3: "test_user",
    4: "test_user",
    5: "test_user",
    6: "test_user",
    7: "test_user",
    8: "test_user",
    9: "test_user",
    10: "test_user",
    11: "test_user",
    12: "test_user",
    13: "test_user",
    14: "test_user",
    15: "test_user",
    16: "test_user",
    17: "test_user",
    18: "test_user",
    19: "test_user",
    20: "test_user",
    21: "test_user",
    22: "test_user",
    23: "test_user",
    24: "test_user",
    25: "test_user",
    26: "test_user",
    27: "test_user",
    28: "test_user",
    29: "test_user",
    30: "test_user",
    31: "test_user",
    32: "test_user",
    33: "Test User",
    34: "Claude",
    35: "Claude",
    36: "Claude",
}
